# vendor

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  DISCLAIMER  LICENSE  MANIFEST.in  Pipfile  README.md  blocklist.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  setup.sh  vulnerability.xlsx
.github/workflows/: ci.yml  codeql.yml  pypi_publish.yml
ak_vendor/: apps.py  axmlprinter.py  blocklist.py  constants.py  enums.py  hipaa.py  owasp.json  owasp.py  pcidss.json  pcidss.py  pnguncrush.py  report.bak.html  report.bak.pug  report.css  report.html  report.pug  report.py  report_sample.py  report_sample1.json  seed.py  tcprelay.py  usbmux.py  utils.py
ak_vendor/compliances/: asvs.py  cwe.py  gdpr.py  hipaa.py  masvs.py  mstg.py  nistsp800171.py  nistsp80053.py  owasp.py  owaspapi2023.py  owaspmobile2024.py  pcidss.py  pcidss4.py  sama.py
ak_vendor/locale/ja/LC_MESSAGES/: django.mo  django.po
ak_vendor/report/: __init__.py  report.py  report_template.html
ak_vendor/templates/: report_template.html
ak_vendor/translations/ja/: subheading.csv  subheading.xlsx  vulnerability.csv  vulnerability.xlsx
scripts/: deploy.sh  report.sh  setup.sh  translate.sh
tests/: __init__.py  test_compliance_data_uniqueness.py
