[tool.poetry]
name = "ak-vendor"
version = "3.0.1"
description = "Some vendor scripts that we use here at Appknox"
authors = ["Appknox <engineering@appknox.com>"]
license = "MIT"
keywords = ["appknox", "vendor"]
classifiers=[
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
repository = "https://github.com/appknox/vendor"

[tool.poetry.dependencies]
python = "^3.8"
orm-choices = "0.3.0"
maya = ">=0.6.0"
html2text = "2020.1.16"
attrs = ">=21.1.0"
cvss = ">=2.0"

[tool.poetry.dev-dependencies]
Django = "^3.2.1"
WeasyPrint = "^52.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
